[project]
name = "dataset-ch-oe2-flux-product"
version = "0.1.0"
description = "Dataset for the cropland CH-OE2."
authors = [
    { name = "Lukas Hörtnagl", email = "lukas.hoertnagl@usys.ethz.ch" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyterlab (>=4.3.5,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
diive = { path = "../../21 - DIIVE/diive", develop = true }
dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
sphinxcontrib-mermaid = ">=1.0.0"
ghp-import = ">=2.1.0"
jupyter-book = ">=1.0.4.post1"
